// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emailHandler aloituskuulutus approval should send emails and attachments succesfully 1`] = `
Object {
  "args": Array [
    Object {
      "Body": "***unittest***",
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "Key": "yllapito/tiedostot/projekti/5/aloituskuulutus/1/lähetekirje.eml",
      "Metadata": Object {
        "asiakirjatyyppi": "ALOITUSKUULUTUS_LAHETEKIRJE",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/5/aloituskuulutus/1/ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA Marikan testiprojekti.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/5/aloituskuulutus/1/KUNGORELSE OM INLEDANDET AV PLANERINGEN Marikas testprojekt.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/5/aloituskuulutus/1/KUULUTUS SUUNNITTELUN ALOITTAMISESTA Marikan testiprojekti.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/5/aloituskuulutus/1/MEDDELANDE OM KUNGORELSE FRAN BEHORIG MYNDIGHET Marikas testprojekt.pdf",
    },
  ],
  "stub": "s3Mock",
}
`;

exports[`emailHandler aloituskuulutus approval should send emails and attachments succesfully 2`] = `
Array [
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ELY/2/2022",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektisi Testiprojekti 2 aloituskuulutus on hyväksytty.

Voit tarkastella kuulutusta osoitteessa https://localhost:3000/yllapito/projekti/5/aloituskuulutus

Sait tämän viestin, koska sinut on merkitty kuulutuksen laatijaksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": "matti.meikalainen@vayla.fi",
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "KUULUTUS SUUNNITTELUN ALOITTAMISESTA Marikan testiprojekti.pdf",
      },
      Object {
        "contentType": "application/pdf",
        "filename": "KUNGORELSE OM INLEDANDET AV PLANERINGEN Marikas testprojekt.pdf",
      },
    ],
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ELY/2/2022",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektisi Testiprojekti 2 aloituskuulutus on hyväksytty.

Voit tarkastella kuulutusta osoitteessa https://localhost:3000/yllapito/projekti/5/aloituskuulutus

Viethän sekä oheisen kuulutuksen että erillisen viestin, jossa on liitteenä ilmoitus kuulutuksesta, asianhallintaan suunnitelman hallinnollisen käsittelyn asialle. Toimi organisaatiosi asianhallinnan ohjeistusten mukaisesti.

Sait tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "pekka.projari@vayla.fi",
    ],
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA Marikan testiprojekti.pdf",
      },
      Object {
        "contentType": "application/pdf",
        "filename": "MEDDELANDE OM KUNGORELSE FRAN BEHORIG MYNDIGHET Marikas testprojekt.pdf",
      },
    ],
    "cc": Array [
      "pekka.projari@vayla.fi",
    ],
    "subject": "Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta",
    "text": "Tämä viesti on lähetetty Valtion liikenneväylien suunnittelu -järjestelmästä, älä vastaa tähän viestiin.

Testiprojekti 2

Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) ilmoittaa, että se julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman ja maastotöiden aloittamista. Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla vähintään 30 päivän ajan siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (laki liikennejärjestelmästä ja maanteistä LjMTL 108§, hallintolaki HL 62 a §)

Kuulutus julkaistaan 28.3.2022 osoitteessa https://localhost:3000/suunnitelma/5/aloituskuulutus.

Suunnittelualueen kuntia pyydetään julkaisemaan liitteenä oleva ilmoitus kuulutuksesta verkkosivuillaan. Ilmoitus tulee julkaista mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä. Ilmoituksen nähtävillä oloa ei tarvitse todentaa ilmoituksen lähettäjälle. Ilmoitus menee ELY-keskuksen ja Väyläviraston kuulutussivulle automaattisesti Valtion liikenneväylien suunnittelu palvelun kautta.

Suunnittelu kohde on osa Hyvinkää-Hanko sähköistyshanketta, jossa toteutetaan myös tasoristeysten toimenpiteitä. Hyväksytyssä ratasuunnitelmassa kyseisessä kohdassa on hyväksytty suunnitelmaratkaisuna Kisan seisakkeen ja Leksvallin tasoristeysten poistaminen parantamalla Helmströmin tasoristeyksen kohdalle uusi tasoristeys. Nyt käynnistetään Rata-suunnitelman päivitys kyseisessä kohdassa ja suunnitellaan kaikkien kolmen tasoristeyksen poistaminen uudella Leksvallin ylikulkusillalla.

Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 

Väylävirasto, Marika Ojanen, puh. 0299878787, marika.ojanen@vayla.fi

Detta meddelande har skickats från Planering av statens trafikleder, vänligen svara inte på detta.

Marikas testprojekt

Närings-, trafik- och miljöcentralen (NTM-centralen) i Nyland meddelar om publiceringen av en kungörelse som gäller inledande av den vägplan som nämns i rubriken samt terrängarbeten. NTM-centralen i Nyland delger ärendet offentligt genom kungörelse under minst 30 dagar på det sätt som föreskrivs om offentlig kungörelse i förvaltningslagen samt genom att publicera kungörelsen i flera dagstidningar med allmän spridning på området. (108 § i lagen om trafiksystem och landsvägar och 62 a § i förvaltningslagen)

Kungörelsen publiceras 28.3.2022 på adressen https://localhost:3000/sv/suunnitelma/5/aloituskuulutus.

Kommunerna i planeringsområdet ombeds publicera det bifogade meddelandet om kungörelse på sin webbplats. Meddelandet ska i mån av möjlighet publiceras den ovan nämnda dagen då kungörelsen publiceras. Man behöver inte bekräfta för avsändaren att meddelandet är framlagt. Meddelandet kommer automatiskt upp på NTM-centralens och Trafikledsverkets kungörelsesida via tjänsten Planering av statens trafikleder. 

Designplatsen är en del av elektrifieringsprojektet Hyvinge-Hangö, som också kommer att genomföra plankorsningsåtgärder. I den fastställda spårplanen är borttagandet av tävlingsstoppet och Leksvallskorsningen genom förbättring av en ny plankorsning vid Helmströms plankorsning vid denna punkt godkänd som planlösning. En uppdatering av Spårplanen kommer nu att lanseras då och man planerar att ta bort alla tre plankorsningarna på den nya Leksvallsöverfarten.

NTM-centralen i Nyland behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://www.ely-keskus.fi/sv/tietosuoja-ja-henkilotietojen-kasittely.

Mer information om planen 

Trafikledsverket, Marika Ojanen, tel. 0299878787, marika.ojanen@vayla.fi",
    "to": Array [
      "mikkeli@mikke.li",
      "juva@ju.va",
      "savonlinna@savonlin.na",
      "kirjaamo.etela-savo@ely-keskus.fi",
    ],
  },
]
`;

exports[`emailHandler aloituskuulutus approval should send saame attachments succesfully 1`] = `
Object {
  "args": Array [
    Object {
      "Body": "***unittest***",
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "Key": "yllapito/tiedostot/projekti/6/aloituskuulutus/1/lähetekirje.eml",
      "Metadata": Object {
        "asiakirjatyyppi": "ALOITUSKUULUTUS_LAHETEKIRJE",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/6/aloituskuulutus/1/ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA Marikan testiprojekti.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/6/aloituskuulutus/1/KUULUTUS SUUNNITTELUN ALOITTAMISESTA Marikan testiprojekti.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/6/aloituskuulutus/1/POHJOISSAAME ILMOITUS SUUNNITTELUN ALOITTAMISESTA Marikan testiprojekti.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/6/aloituskuulutus/1/POHJOISSAAME KUULUTUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA Marikan testiprojekti testiprojekti.pdf",
    },
  ],
  "stub": "s3Mock",
}
`;

exports[`emailHandler aloituskuulutus approval should send saame attachments succesfully 2`] = `
Array [
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ELY/2/2022",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektisi Testiprojekti 2 aloituskuulutus on hyväksytty.

Voit tarkastella kuulutusta osoitteessa https://localhost:3000/yllapito/projekti/6/aloituskuulutus

Sait tämän viestin, koska sinut on merkitty kuulutuksen laatijaksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": "matti.meikalainen@vayla.fi",
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "KUULUTUS SUUNNITTELUN ALOITTAMISESTA Marikan testiprojekti.pdf",
      },
      Object {
        "contentType": "application/pdf",
        "filename": "POHJOISSAAME KUULUTUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA Marikan testiprojekti testiprojekti.pdf",
      },
    ],
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ELY/2/2022",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektisi Testiprojekti 2 aloituskuulutus on hyväksytty.

Voit tarkastella kuulutusta osoitteessa https://localhost:3000/yllapito/projekti/6/aloituskuulutus

Viethän sekä oheisen kuulutuksen että erillisen viestin, jossa on liitteenä ilmoitus kuulutuksesta, asianhallintaan suunnitelman hallinnollisen käsittelyn asialle. Toimi organisaatiosi asianhallinnan ohjeistusten mukaisesti.

Sait tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "pekka.projari@vayla.fi",
    ],
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA Marikan testiprojekti.pdf",
      },
      Object {
        "contentType": "application/pdf",
        "filename": "POHJOISSAAME ILMOITUS SUUNNITTELUN ALOITTAMISESTA Marikan testiprojekti.pdf",
      },
    ],
    "cc": Array [
      "pekka.projari@vayla.fi",
    ],
    "subject": "Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta",
    "text": "Tämä viesti on lähetetty Valtion liikenneväylien suunnittelu -järjestelmästä, älä vastaa tähän viestiin.

Testiprojekti 2

Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) ilmoittaa, että se julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman ja maastotöiden aloittamista. Uudenmaan ELY-keskus saattaa asian tiedoksi julkisesti kuuluttamalla vähintään 30 päivän ajan siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (laki liikennejärjestelmästä ja maanteistä LjMTL 108§, hallintolaki HL 62 a §)

Kuulutus julkaistaan 28.3.2022 osoitteessa https://localhost:3000/suunnitelma/6/aloituskuulutus.

Suunnittelualueen kuntia pyydetään julkaisemaan liitteenä oleva ilmoitus kuulutuksesta verkkosivuillaan. Ilmoitus tulee julkaista mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä. Ilmoituksen nähtävillä oloa ei tarvitse todentaa ilmoituksen lähettäjälle. Ilmoitus menee ELY-keskuksen ja Väyläviraston kuulutussivulle automaattisesti Valtion liikenneväylien suunnittelu palvelun kautta.

Suunnittelu kohde on osa Hyvinkää-Hanko sähköistyshanketta, jossa toteutetaan myös tasoristeysten toimenpiteitä. Hyväksytyssä ratasuunnitelmassa kyseisessä kohdassa on hyväksytty suunnitelmaratkaisuna Kisan seisakkeen ja Leksvallin tasoristeysten poistaminen parantamalla Helmströmin tasoristeyksen kohdalle uusi tasoristeys. Nyt käynnistetään Rata-suunnitelman päivitys kyseisessä kohdassa ja suunnitellaan kaikkien kolmen tasoristeyksen poistaminen uudella Leksvallin ylikulkusillalla.

Uudenmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.

Lisätietoja antaa 

Väylävirasto, Marika Ojanen, puh. 0299878787, marika.ojanen@vayla.fi

",
    "to": Array [
      "mikkeli@mikke.li",
      "juva@ju.va",
      "savonlinna@savonlin.na",
      "kirjaamo.etela-savo@ely-keskus.fi",
    ],
  },
]
`;

exports[`emailHandler hyväksymispäätös aineistomuokkaus approval wont send ilmoitus mails for aineistoMuokkaus 1`] = `
Object {
  "args": Array [
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431_4 Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf",
    },
  ],
  "stub": "s3Mock",
}
`;

exports[`emailHandler hyväksymispäätös approval should send emails and attachments succesfully 1`] = `
Object {
  "args": Array [
    Object {
      "Body": "***unittest***",
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/lähetekirje.eml",
      "Metadata": Object {
        "asiakirjatyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE_LAHETEKIRJE",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/paatos/TYHJÄ.txt",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/hyvaksymispaatos/1/T431_4 Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf",
    },
  ],
  "stub": "s3Mock",
}
`;

exports[`emailHandler nähtävilläolo aineistomuokkaus approval wont send ilmoitus mails for aineistoMuokkaus 1`] = `
Object {
  "args": Array [
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/2 sv.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/2.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/3 sv.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/3.pdf",
    },
  ],
  "stub": "s3Mock",
}
`;

exports[`emailHandler nähtävilläolo approval should send emails and attachments succesfully 1`] = `
Object {
  "args": Array [
    Object {
      "Body": "***unittest***",
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/lähetekirje.eml",
      "Metadata": Object {
        "asiakirjatyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KUNNILLE_VIRANOMAISELLE_LAHETEKIRJE",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/1 sv.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/1.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/2 sv.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/2.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/3 sv.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/2/nahtavillaolo/1/3.pdf",
    },
  ],
  "stub": "s3Mock",
}
`;
